Nuevo método para obtener todos los documentos
