# docs/swagger.json
@@ -11,7 +11,7 @@
         },
         "version": "1.0"
     },
-    "host": "localhost:80",
+    "host": "prime.bucaramanga.upb.edu.co",
     "basePath": "/api",
     "paths": {
         "/": {
@@ -32,6 +32,32 @@
                         "description": "OK",
                         "schema": {
                             "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/all/": {
+            "get": {
+                "description": "Este método devuelve un json que contiene todos los documentos de todas las colecciones existentes",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Root"
+                ],
+                "summary": "obtener todos los documentos en un solo objeto",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "object"
+                            }
                         }
                     }
                 }
@@ -233,9 +259,9 @@
                 }
             }
         },
-        "/habilidades/": {
+        "/epicas/": {
             "get": {
-                "description": "Este método devuelve una colección de documento tipo Habilidades según la paginación definida",
+                "description": "Este método devuelve una colección de documento tipo Epicas según la paginación definida",
                 "consumes": [
                     "application/json"
                 ],
@@ -243,9 +269,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Habilidades"
+                    "Epicas"
                 ],
-                "summary": "trae una colección de documentos tipo Habilidades",
+                "summary": "trae una colección de documentos tipo Epicas",
                 "parameters": [
                     {
                         "type": "integer",
@@ -264,11 +290,11 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Documento tipo Habilidades",
+                        "description": "Documento tipo Epicas",
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.HabilidadesModel"
+                                "$ref": "#/definitions/models.EpicasModel"
                             }
                         }
                     },
@@ -287,7 +313,7 @@
                 }
             }
         },
-        "/habilidades/{id}": {
+        "/epicas/{id}": {
             "get": {
                 "description": "Este método devuelve un solo documento tipo héroe según el id proporcionado para la búsqueda",
                 "consumes": [
@@ -297,9 +323,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Habilidades"
+                    "Epicas"
                 ],
-                "summary": "trae un documento tipo habilidad",
+                "summary": "trae un documento tipo Epica",
                 "parameters": [
                     {
                         "type": "string",
@@ -311,9 +337,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Documento tipo habilidad",
+                        "description": "Documento tipo Epica",
                         "schema": {
-                            "$ref": "#/definitions/models.HabilidadesModel"
+                            "$ref": "#/definitions/models.EpicasModel"
                         }
                     },
                     "400": {
@@ -802,7 +828,7 @@
                 }
             }
         },
-        "models.HabilidadesModel": {
+        "models.EpicasModel": {
             "type": "object",
             "required": [
                 "urlImagen"
